Creacion de diseño del main, solo se ve si se ejecuta el code
Refactor: nuevos formularios y proyecto AcercaDeForm

Se eliminan los archivos originales de Form1 en IMC y se añaden AboutForm, CalculateForm, InicioForm y ResultForm con sus diseñadores y recursos. El formulario principal (InicioForm) ahora incluye personalización visual avanzada. Se agregan archivos .resx para gestión de recursos. Se crea el proyecto independiente AcercaDeForm con configuración, recursos y settings propios. Se actualizan los archivos .csproj y se añaden metadatos y clases de recursos. La solución queda dividida en dos proyectos y se mejora el diseño visual de IMC.

--- a/AcercaDeForm/AcercaDeForm.csproj
+++ b/AcercaDeForm/AcercaDeForm.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9CC0CE5E-B4DA-4AFD-81EC-A36709C928DE}</ProjectGuid>
+    <ProjectGuid>{4C61B43D-70A3-4E01-88D2-DE46798673BC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>IMC</RootNamespace>
-    <AssemblyName>IMC</AssemblyName>
+    <RootNamespace>AcercaDeForm</RootNamespace>
+    <AssemblyName>AcercaDeForm</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,32 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CapturaDatosForm.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CapturaDatosForm.Designer.cs">
-      <DependentUpon>CapturaDatosForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="InicioForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="InicioForm.Designer.cs">
-      <DependentUpon>InicioForm.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResultadoForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ResultadoForm.Designer.cs">
-      <DependentUpon>ResultadoForm.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="CapturaDatosForm.resx">
-      <DependentUpon>CapturaDatosForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="InicioForm.resx">
-      <DependentUpon>InicioForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -81,9 +63,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ResultadoForm.resx">
-      <DependentUpon>ResultadoForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
