--- a/IMC/IMC.csproj
+++ b/IMC/IMC.csproj
@@ -52,6 +52,24 @@
     <Compile Include="CapturaDatosForm.Designer.cs">
       <DependentUpon>CapturaDatosForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="imcAlto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="imcAlto.Designer.cs">
+      <DependentUpon>imcAlto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ImcBajo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImcBajo.Designer.cs">
+      <DependentUpon>ImcBajo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="imcNormal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="imcNormal.Designer.cs">
+      <DependentUpon>imcNormal.cs</DependentUpon>
+    </Compile>
     <Compile Include="InicioForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +86,15 @@
     </Compile>
     <EmbeddedResource Include="CapturaDatosForm.resx">
       <DependentUpon>CapturaDatosForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="imcAlto.resx">
+      <DependentUpon>imcAlto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImcBajo.resx">
+      <DependentUpon>ImcBajo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="imcNormal.resx">
+      <DependentUpon>imcNormal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InicioForm.resx">
       <DependentUpon>InicioForm.cs</DependentUpon>
